--- a/app.css
+++ b/app.css
@@ -1,3 +1,35 @@
 *{
   box-sizing: border-box;
 }
+
+main {
+  width: 900px;
+  margin: 0 auto;
+}
+
+header {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+
+form {
+  width: 60%;
+  margin: 25px auto;
+}
+
+fieldset{
+  border: 1px solid lightgrey;
+  padding: 10 5px 10px 5px;
+}
+
+label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 100%;
+}
