--- a/app.css
+++ b/app.css
@@ -3,7 +3,7 @@
 }
 
 main {
-  width: 900px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -15,13 +15,13 @@ header {
 }
 
 form {
-  width: 60%;
+  width: 75%;
   margin: 25px auto;
 }
 
 fieldset{
   border: 1px solid lightgrey;
-  text-align: center;
+  
 }
 
 label {
@@ -37,4 +37,31 @@ input {
 
 button {
   width: 15%;
+  float: right;
+}
+
+.results {
+  width: 80%;
+  margin: 0 auto;
+  padding: 0px;
+  text-align: center;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+div {
+  margin: 5px 0px 5px 0px;
+}
+
+img {
+  width: 100%;
+}
+
+.title {
+  font-size: 18px;
+  font-weight: bold;
+  
 }
