--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 *{
   box-sizing: border-box;
+  background-color: whitesmoke;
 }
 
 main {
@@ -64,4 +65,25 @@ img {
   font-size: 18px;
   font-weight: bold;
   
+}
+
+.videoModal {
+   display: none; 
+   position: fixed; 
+   z-index: 1; 
+   left: 0;
+   top: 0;
+   width: 100%; 
+   height: 100%; 
+   overflow: auto; 
+   background-color: rgb(0,0,0); 
+   /* for no alpha support */
+   background-color: rgba(0,0,0,0.85); 
+}
+
+.video {
+  background-color: #fefefe;
+  padding: 100px;
+  margin: 60px auto; 
+  width: 75%; 
 }
