--- a/app.css
+++ b/app.css
@@ -1,6 +1,5 @@
 *{
   box-sizing: border-box;
-  background-color: whitesmoke;
 }
 
 main {
@@ -9,10 +8,15 @@ main {
 }
 
 header {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
-  border-bottom: 1px solid black;
+}
+
+h1 {
+  border-bottom: 1px solid #999;
+  padding: 0px 20px 10px 20px;
+  display: inline;
 }
 
 form {
@@ -75,15 +79,15 @@ img {
    top: 0;
    width: 100%; 
    height: 100%; 
-   overflow: auto; 
    background-color: rgb(0,0,0); 
    /* for no alpha support */
-   background-color: rgba(0,0,0,0.85); 
+   background-color: rgba(0,0,0,.9); 
 }
 
 .video {
-  background-color: #fefefe;
-  padding: 100px;
-  margin: 60px auto; 
-  width: 75%; 
+  background-color: black;
+  height: 500px;
+  margin: 60px auto;
+  width: 100%;
+  max-width: 900px;
 }
