--- a/app.css
+++ b/app.css
@@ -102,3 +102,11 @@ img {
   background-color: red;
   border: 1px solid #444;
 }
+
+p[role=alert] {
+  color: white;
+  height: 25px;
+  margin: 60px auto;
+  font-size: 30px;
+  text-align: center;
+}
